fixed footer position - can't get login button aligned

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,12 @@ body{
   padding-right: 50px; 
 }
 
+.navbar-nav{
+  display: flex;
+  align-items: flex-end;
+  float: left; 
+}
+
 /*destinations styling*/
 .grid-container {
 
@@ -193,7 +199,7 @@ h1 {
 
 .footer {
   padding: 30px;
-  margin-top: 60px;
+  margin-top: 100px;
 }
 
 .footer .footer-text {
